# RustCat

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Info.plist  README.md  build.rs  build_app_icon.sh  build_linux.sh  build_macos.sh  create_dmg.sh  flake.nix
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: rust.yaml
assets/: rustcat.desktop
src/: app.rs  cpu_usage.rs  events.rs  icon_manager.rs  logging.rs  main.rs  settings.rs  windows_api.rs
src/platform/: mod.rs
src/platform/linux/: app.rs  cpu_usage.rs  mod.rs  settings.rs  system_integration.rs
src/platform/macos/: app.rs  cpu_usage.rs  mod.rs  settings.rs  system_integration.rs
src/platform/windows/: app.rs  cpu_usage.rs  mod.rs  settings.rs  system_integration.rs
