[package]
name = "rust_cat"
version = "1.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trayicon = "0.2.0"
winreg = "0.55.0"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_System_SystemInformation"
]

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "rust_cat.exe"
FileDescription = "π’» => ππΊπΈπΉπ»πΌπ½πβ€β¬›"
LegalCopyright = "Copyright Β© 2021 Bearice Ren <https://github.com/bearice/RustCat>"
