[package]
name = "rust_cat"
version = "2.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trayicon = { git = "https://github.com/bearice/trayicon-rs.git" }
flate2 = "1.0"
dirs = "5.0"
dispatch = "0.2.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3" }
objc2-foundation = { version = "0.3" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_System_SystemInformation"
]

[profile.release]
opt-level = "z"        # Optimize for size
strip = true           # Strip debug symbols
lto = true             # Enable Link Time Optimization
codegen-units = 1      # Reduce code generation units
panic = "abort"        # Reduce panic code size

[build-dependencies]
flate2 = "1.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "rust_cat.exe"
FileDescription = "π’» => ππΊπΈπΉπ»πΌπ½πβ€β¬›"
LegalCopyright = "Copyright Β© 2021 Bearice Ren <https://github.com/bearice/RustCat>"
